# fds

./: Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml  test.yml
src/: config.rs  main.rs  ui.rs
src/fund/: fetch.rs  fetcher.rs  mod.rs  model.rs
