[package]
name = "fds"
version = "0.3.0"
authors = ["x1ah <x1ahgxq@gmail.com>"]
description = "A tool to manage fund."
edition = "2018"
license = "MIT"
homepage = "https://github.com/x1ah/fds"
repository = "https://github.com/x1ah/fds"
keywords = ["stock", "funds", "cli"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
url = "2.1.1"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
regex = "1.3.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
futures = "0.3.5"
toml = "0.5.6"
dirs = "3.0.1"
termion = "1.5.5"
